# TheMind

./: .gitignore  CMakeLists.txt  Dockerfile  Game.c  Game.h  README.md  StatsManager.c  StatsManager.h  entrypoint.sh  install.sh  main.c  playersRessources.c  playersRessources.h  statsManager.c  utils.c  utils.h  valgrind_logs.txt
TheMindClient/: CMakeLists.txt
TheMindClient/ressources/: help_command.txt  rules.txt
TheMindClient/src/: main.c  utils.c  utils.h
TheMindRobot/: CMakeLists.txt
TheMindRobot/src/: GameState.c  GameState.h  main.c  parser.c  parser.h  queue.c  queue.h  robot.c  utils.c  utils.h
ressources/: main.tex
scripts/: add_rank.sh  extract_data.sh  loosing_cards_histogram.gnuplot  loosing_cards_pie.gnuplot  make_dg.sh  make_pdf.sh  reaction_histogram.gnuplot  rounds_levels.gnuplot  top10.sh
src/: ANSI-color-codes.h  Game.c  Game.h  main.c  playersRessources.c  playersRessources.h  queue.c  statsManager.c  statsManager.h  utils.c  utils.h
src/robot/: a.out  main.c
